<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login"
    tools:context=".IniciarSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            tools:ignore="ContentDescription"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/trabajo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff0000"
            android:text="@string/tLUsuario"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/etLUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/cLUsuario"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:text="@string/tLContraseña"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etLContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/cLContraseña"
            android:textSize="20sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@android:color/background_light"
            android:text="@string/tEnviar" />
    </LinearLayout>

</ScrollView>
